deploy/kanarini-demo/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: emoji-canary
  namespace: kanarini-demo
  labels:
    app: emoji
    track: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emoji
      track: canary
  template:
    metadata:
      labels:
        app: emoji
        track: canary
    spec:
      containers:
      - name: emoji
        image: nilebox/kanarini-example:0.0.0-fe446dc
        args:
        - --error-rate
        - "1.0"
        - --version
        - "2.0"
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9090
          name: metrics
        readinessProbe:
          tcpSocket:
            port: 8080
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          tcpSocket:
            port: 8080
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: emoji-stable
  namespace: kanarini-demo
  labels:
    app: emoji
    track: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emoji
      track: stable
  template:
    metadata:
      labels:
        app: emoji
        track: stable
    spec:
      containers:
      - name: emoji
        image: nilebox/kanarini-example:0.0.0-fe446dc
        args:
        - --error-rate
        - "0.0"
        - --version
        - "1.0"
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9090
          name: metrics
        readinessProbe:
          tcpSocket:
            port: 8080
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          tcpSocket:
            port: 8080
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
