deploy/kanarini-demo/ingressroutes.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: emoji
  namespace: kanarini-demo
spec:
  virtualhost:
    fqdn: example.com
  routes:
    - match: /
      services:
        - name: emoji-canary
          port: 80
          weight: 50
        - name: emoji-stable
          port: 80
          weight: 50
